RESOLVED FIXED124861
freeOwnedGPtr(GError*) needs to be exported
https://bugs.webkit.org/show_bug.cgi?id=124861
Summary freeOwnedGPtr(GError*) needs to be exported
Alex Christensen
Reported 2013-11-25 14:44:15 PST
WebKit doesn't link on Windows without exporting freeOwnedGPtr(GError*). Specifically MediaPlayerPrivateGStreamer.obj and GStreamerUtilities.obj have 1 unresolved external symbol when linking.
Attachments
Patch (1.05 KB, patch)
2013-11-25 14:55 PST, Alex Christensen
no flags
Patch (1.68 KB, patch)
2013-12-16 20:50 PST, Alex Christensen
no flags
Alex Christensen
Comment 1 2013-11-25 14:55:14 PST
Brent Fulgham
Comment 2 2013-11-26 19:08:42 PST
Comment on attachment 217835 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=217835&action=review > Source/WTF/wtf/gobject/GOwnPtr.cpp:30 > +WTF_EXPORT_PRIVATE void freeOwnedGPtr(GError* ptr) It seem strange that this is not a template on Windows. Why is that?
Philippe Normand
Comment 3 2013-11-28 06:47:47 PST
The folks trying to build the MediaPlayerPrivate on OSX have the same issue, it seems.
Alex Christensen
Comment 4 2013-11-30 21:35:58 PST
It does seem strange, but it doesn't export the correct linker symbol as a template. Maybe this should be changed where it is used instead of where it's defined. I'll look into this more next week.
Alex Christensen
Comment 5 2013-12-16 20:50:36 PST
Alex Christensen
Comment 6 2013-12-16 20:53:28 PST
It said I had different linkage because I forgot to add it to the declaration. Adding it to the declaration and definition solves the problem the right way.
WebKit Commit Bot
Comment 7 2013-12-17 10:42:40 PST
Comment on attachment 219392 [details] Patch Clearing flags on attachment: 219392 Committed r160716: <http://trac.webkit.org/changeset/160716>
WebKit Commit Bot
Comment 8 2013-12-17 10:42:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.