[Win] Fixed linker error with GStreamer. https://bugs.webkit.org/show_bug.cgi?id=124861

Patch by Alex Christensen <achristensen@webkit.org> on 2013-12-17
Reviewed by Martin Robinson.

* wtf/gobject/GOwnPtr.cpp:
(WTF::GError):
* wtf/gobject/GOwnPtr.h:
Added WTF_EXPORT_PRIVATE to freeOwnedGPtr<GError> declaration and definition.

Canonical link: https://commits.webkit.org/143872@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160716 268f45cc-cd09-0410-ab3c-d52691b4dbfc